--- a/getintouch.html
+++ b/getintouch.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <base target="_blank" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mike's webpage</title>
     <!--Google Fonts-->
