--- a/getintouch.html
+++ b/getintouch.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <base target="_blank" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mike's webpage</title>
     <!--Google Fonts-->
@@ -61,7 +60,8 @@
                     <div class="badge-base LI-profile-badge" data-locale="sv_SE" data-size="medium" data-theme="light"
                         data-type="HORIZONTAL" data-vanity="mikael-nyström-07179293" data-version="v1"><a
                             class="badge-base__link LI-simple-link fa-brands fa-linkedin fa-3x animated-text"
-                            href="https://se.linkedin.com/in/mikael-nystr%C3%B6m-07179293?trk=profile-badge"></a></div>
+                            href="https://se.linkedin.com/in/mikael-nystr%C3%B6m-07179293?trk=profile-badge"
+                            target="_blank"></a></div>
 
                     <!-- <a href="https://www.linkedin.com/in/mikael-nystr%C3%B6m-07179293">
                         <i class="fa-brands fa-linkedin fa-3x animated-text"></i>
