--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
         </nav>
 
         <!-- Blog -->
-        <iframe src="https://v1.embednotion.com/embed/d66b5f09a202460681d475522a5c608f"></iframe>
+        <iframe src="https://v1.embednotion.com/embed/8cf4809dd1a34e799ded019882cd428d"></iframe>
         <style>
             iframe {
                 width: 100%;
@@ -60,6 +60,16 @@
                 padding: none;
             }
         </style>
+        <iframe src="https://v1.embednotion.com/embed/8cf4809dd1a34e799ded019882cd428d"></iframe>
+        <style>
+            iframe {
+                width: 100%;
+                height: 1000px;
+                padding: none;
+            }
+        </style>
+
+
 
 
     </section>
